bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: type mismatch;
 found   : Boolean(true)
 required: Int
    case true if 111>n>89 => return true
         ^NearHundred:3: error: type mismatch;
 found   : Int(89)
 required: Boolean
    case true if 111>n>89 => return true
                       ^NearHundred:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
    case true if 211>n>189 => return true
         ^NearHundred:4: error: type mismatch;
 found   : Int(189)
 required: Boolean
    case true if 211>n>189 => return true
                       ^