bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case true if 111>n>89 => return true
    case true if 211>n>189 => return true
    case n => return false
  }
}